@@ -1,6 +1,8 @@
 Release 0.6.2 (in development)
 ==============================
 
+* #173: Respect the docutils ``title`` directive.
+
 * #172: The ``obj`` role now links to modules as promised.
 
 * #19: Tables now can have a "longtable" class, in order to get
